--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "name": "Wasiq Bhamla"
   },
   "scripts": {
-    "start": "webpack server --config webpack/webpack.config.js --open"
+    "start": "webpack server --config webpack/webpack.config.js --env env=dev --open",
+    "build": "webpack --config webpack/webpack.config.js --env env=prod"
   },
   "license": "MIT",
   "dependencies": {
@@ -19,7 +20,7 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
@@ -28,6 +29,7 @@
     "typescript": "^4.8.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.1"
+    "webpack-dev-server": "^4.10.1",
+    "webpack-merge": "^5.8.0"
   }
 }
