--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
