--- a/package.json
+++ b/package.json
@@ -6,34 +6,36 @@
     "name": "Wasiq Bhamla"
   },
   "scripts": {
-    "start": "webpack server --config webpack/webpack.config.js --env env=dev --open",
+    "start": "webpack server --config webpack/webpack.config.js --env env=dev",
     "build": "webpack --config webpack/webpack.config.js --env env=prod"
   },
   "license": "MIT",
   "dependencies": {
-    "daisyui": "^2.24.0",
+    "daisyui": "^2.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "@babel/preset-env": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/react": "^18.0.18",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
+    "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.2",
+    "typescript": "^4.8.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.1",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
   }
 }
