--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
+    "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime": "^7.19.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
@@ -30,6 +32,7 @@
     "@typescript-eslint/parser": "^5.38.0",
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
@@ -50,6 +53,7 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
@@ -61,5 +65,6 @@
     "./**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "yarn format"
     ]
-  }
+  },
+  "packageManager": "yarn@3.2.3"
 }
